--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,16 @@
 pluginGroup = com.github.sorinflorea.runconfigextras
 pluginName = "Run Configuration Extras"
 pluginRepositoryUrl = https://github.com/sorin-florea/RunConfigExtras
-pluginVersion = 1.0.2
+pluginVersion = 1.0.4
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 222
+pluginUntilBuild = 233.*
+
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
-platformVersion = 2022.2
+platformVersion = 2023.1
 
 platformPlugins = java
 
